# rust-practice

./: README.md
.github/workflows/: rust.yml
actix-sim-yt/: Cargo.toml
actix-sim-yt/src/: add.rhai  main.rs  multiply.rhai
api-call-yt/: Cargo.toml
api-call-yt/src/: main.rs
async-rust-yt/: Cargo.toml
async-rust-yt/src/: main.rs
auth-yt/: Cargo.toml
auth-yt/src/: main.rs
axum-postgres-yt/: .env  Cargo.toml
axum-postgres-yt/src/: handler.rs  main.rs  route.rs  schema.rs
compress_youtube/: Cargo.toml
compress_youtube/src/: main.rs
counter/: README.md
counter/files/: pg1251.txt
counter/src/: main.rs
csv-yt/: Cargo.toml
csv-yt/src/: main.rs
get-req-yt/: Cargo.toml
get-req-yt/src/: main.rs
git-automate-yt/: Cargo.toml
git-automate-yt/src/: main.rs
img-yt/: Cargo.toml
img-yt/src/: main.rs
ip_sniffer/: Cargo.toml
ip_sniffer/src/: main.rs
json-write-yt/: Cargo.toml
json-write-yt/src/: main.rs
links-extract-yt/: Cargo.toml
mongo-rust-yt/: Cargo.toml
mongo-rust-yt/src/: db.rs  error.rs  handler.rs  main.rs
movie/: Cargo.toml  README.md  movies.json
movie/src/: handler.rs  main.rs  models.rs  services.rs
movie_importer/: Cargo.toml  DVDs.txt  README.md  movies.json
movie_importer/src/: lib.rs  main.rs
pass-vault-yt/: Cargo.toml
pass-vault-yt/src/: main.rs  pentry.rs
r_crawler/: Cargo.toml
r_crawler/src/: main.rs
r_wasm_snake/: Cargo.toml
r_wasm_snake/src/: canvas.rs  main.rs  snake.rs
r_wasm_snake/static/: index.html
rblockchain/: Cargo.toml
rblockchain/src/: blockchain.rs  main.rs
rbrowserengine/: Cargo.toml
rbrowserengine/example/: example.css
rbrowserengine/src/: command.rs  css.rs  css_parser.rs  dom.rs  html_parse.rs  layout.rs  lib.rs  render.rs  style.rs
rchat/client/src/: main.rs
rchat/server/src/: main.rs
read-json-yt/: Cargo.toml
read-json-yt/src/: main.rs
resto-warp-yt/app-server/: Cargo.toml
resto-warp-yt/app-server/src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
resto-warp-yt/client-server/: Cargo.toml
resto-warp-yt/client-server/src/: main.rs
rlinkcrawler/: Cargo.toml
rlinkcrawler/src/: crawler.rs  fetch.rs  main.rs
rpong/: Cargo.toml
rpong/src/: main.rs
rsnake/: Cargo.toml
rsnake/src/: draw.rs  game.rs  main.rs  snake.rs
rtodo/: Cargo.toml
rtodo/src/: main.rs
rust-chatgpt-yt/: .env  Cargo.toml
rust-chatgpt-yt/src/: main.rs
rust-decompress/: Cargo.toml
rust-decompress/src/: main.rs
rust-fb-yt/: Cargo.toml
rust-fb-yt/src/: main.rs
rust-mongo/: Cargo.toml
rust-mongo/src/: main.rs
rust-pastebin-yt/: Cargo.toml
rust-pastebin-yt/src/: index.html  main.rs  style.css
rust-postgres/: Cargo.toml
rust-postgres/src/: main.rs
rust-random/: Cargo.toml
rust-random/src/: main.rs
rust-sqlite-vault-yt/: Cargo.toml
rust-sqlite-vault-yt/src/: db.rs  main.rs
rust-sqlite-yt/: Cargo.toml
rust-sqlite-yt/src/: main.rs
rust-warp-jwt-yt/: Cargo.toml
rust-warp-jwt-yt/src/: auth.rs  error.rs  main.rs
rust_axum_surrealdb_api/: Cargo.toml
rust_axum_surrealdb_api/src/: main.rs
rust_axum_surrealdb_api/src/api/: mod.rs
rust_axum_surrealdb_api/src/application/commands/: update_todo_command.rs
rust_axum_surrealdb_api/src/application/commands/requests/: update_todo_request.rs
rust_axum_surrealdb_api/src/application/queries/: get_all_todos_query.rs  get_todo_by_id_query.rs
rust_axum_surrealdb_api/src/infrastructure/data/db_context/: surreal_context.rs
rust_axum_surrealdb_api/src/infrastructure/data/repositories/: todo_repository.rs
rust_axum_surrealdb_api/surrealdb/: docker-compose.yml
rwebapi/: Cargo.toml
rwebapi/src/: database.rs  handlers.rs  main.rs  models.rs
spotify-search-yt/: Cargo.toml
spotify-search-yt/src/: main.rs
tide-basic-crud/: .env  Cargo.toml
tide-basic-crud/src/: main.rs
tide-basic-crud/src/controllers/: auth.rs  dino.rs  mod.rs  views.rs
tide-basic-crud/src/handlers/: dino.rs
wh/: Cargo.toml  README.md
wh/src/: main.rs
yew-app/: LICENSE-MIT  README.md  index.html
yt-download-cli/: Cargo.toml
yt-download-cli/src/: download.rs  errors.rs  main.rs
