[package]
name = "api-call-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.1", features = ["blocking", "json"]}
tokio = { version = "1.36.0", features = ["full"]}
