[package]
name = "axum-postgres-yt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sqlx = {version = "0.8.0",features = ["postgres", "runtime-async-std-native-tls", "chrono", "uuid"]}
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
