[package]
name = "img-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.10.1"
reqwest = { version = "0.12.1", features = ["blocking", "json"]}
tokio = { version = "1.36.0", features = ["full"]}
error-chain = "0.12.4"
