[package]
name = "mongo-rust-yt"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
futures = {version = "0.3.30",default-features = false,  features = ["async-await"]}
mongodb = "3.0.1"
serde = {version = "1.0.204", features = ["derive"]}
thiserror = "1.0.63"
tokio = {version = "1.38.1", features = ["macros"]}
warp = "0.3.7"
