[package]
name = "rust-chatgpt-yt"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
hyper = {version = "^0.14", features = ["full"]}
hyper-tls = "0.5"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.122"
spinners = "4.1.1"
tokio = {version = "1.39.2", features = ["full"]}
