[package]
name = "rust-warp-jwt-yt"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_derive = "1.0.204"
serde_json = "1.0.122"
thiserror = "1.0.63"
tokio = {version = "1.39.2", features = ["full"]}
tokio-macros = "2.4.0"
warp = "0.3.7"
