[package]
name = "rust_axum_surrealdb_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
once_cell = "1.19.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
surrealdb = "1.5.4"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
