[package]
name = "yt-download-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.7"
dirs = "5.0.1"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json", "stream"]}
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"]}
tokio-macros = "2.3.0"
